# chunkers-embedders-rankers

./: Makefile  README.md  pyproject.toml
src/cer/chunker/: __init__.py  base.py  markdown_chunker.py
src/cer/cross_encoder/: __init__.py  base.py  bge_reranker_client.py  client.py  openai_reranker_client.py  rrf_reranker_client.py
src/cer/embedder/: __init__.py  base.py  client.py  gemini.py  openai.py  sentence_transformer.py
src/cer/retriever/: __init__.py  client.py  embedding_retriever.py  hybrid_retriever.py  text_retriever.py
src/cer/utils/: schemas.py  similarity.py  yaml_helpers.py
tests/: conftest.py  support.py
tests/cross_encoder/: test_bge_reranker_client.py  test_openai_reranker_client.py  test_openai_reranker_mocked.py  test_rrf_reranker_client.py
tests/embedder/: __init__.py  test_base_embedder.py  test_embedder_client.py  test_sentence_transformer.py
tests/retriever/: test_embedding_retriever.py  test_hybrid_retriever.py  test_retriever_client_integration.py  test_text_retriever.py
