[project]
name = "chunkers-embedders-rankers"
version = "0.1.0"
description = "Reusable chunking, embedding, retrieval, and reranking building blocks for retrieval pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
# OpenAI-backed embeddings and reranking.
openai = ["openai>=2.43.0"]
# Google Gemini / Vertex AI embeddings.
gemini = ["google-genai>=2.9.0", "google-auth>=2.55.0"]
# Local models via sentence-transformers (SentenceTransformer embeddings + BGE reranker). Pulls torch.
local = ["sentence-transformers>=5.6.0"]
# Document chunking.
chunking = ["chunknorris>=1.3.1", "psutil>=7.2.2"]
# BM25 / embedding / hybrid retrieval and similarity helpers.
retrieval = ["bm25s>=0.3.9", "scikit-learn>=1.9.0", "nltk>=3.9.4"]
# Everything.
all = [
    "openai>=2.43.0",
    "google-genai>=2.9.0",
    "google-auth>=2.55.0",
    "sentence-transformers>=5.6.0",
    "chunknorris>=1.3.1",
    "psutil>=7.2.2",
    "bm25s>=0.3.9",
    "scikit-learn>=1.9.0",
    "nltk>=3.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/cer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
